--- a/css/global.css
+++ b/css/global.css
@@ -40,6 +40,10 @@ img {
     max-width: 4ch;
 }
 
+.introducao img{
+  border-radius: 100px;
+}
+
 @media (max-width: 800px){
   .subtitulo{
     font-size: 3rem;
